# skills-manager

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  release-packaging.md
scripts/release/: build-bundle.mjs  version-manager.mjs
src/: App.css  App.tsx  default-platforms.ts  index.css  platform-types.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: EnvironmentCheck.tsx  Layout.tsx  Settings.tsx  SkillDistribution.tsx  SkillInstallation.tsx  SkillsManagement.tsx
src/components/ui/: Modal.tsx
src/lib/: ansi.ts  path.ts
src/services/: fs-service.ts  skills-cli-service.ts  skills-service.ts
src/types/: skill-types.ts
