[package]
name = "skills-manager"
version = "0.1.0"
description = "A Tauri desktop app for managing local AI coding skills and distributing them across different clients."
authors = ["Linwu"]
license = "MIT"
repository = "https://github.com/mylinwu/skills-manager"
homepage = "https://github.com/mylinwu/skills-manager"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
home = "0.5.12"
junction = "1.4.2"
